--- a/stackato.yml
+++ b/stackato.yml
@@ -4,12 +4,15 @@ url:
     - openwebdevice.org
     - www.openwebdevice.org
 framework:
-    type: generic
+    type: python
+requirements:
+    pip:
+        - django==1.6
 hooks:
     pre-staging:
         - git clone https://github.com/caktus/mozilla-flask-crb.git
-processes:
-    web: cd $HOME/mozilla-flask-crb/build; python -m SimpleHTTPServer $PORT
+#processes:
+#    web: cd $HOME/mozilla-flask-crb/build; python -m SimpleHTTPServer $PORT
 cron:
     - "0 * * * * cd $HOME/mozilla-flask-crb; git pull"
     
